--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 81",
     "lint": "eslint"
   },
   "dependencies": {
-    "@ant-design/icons": "~5.6.1",
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "antd": "^5.28.0",
-    "axios": "^1.13.2",
-    "dayjs": "^1.11.19",
+    "@ant-design/icons": "5.6.1",
+    "@ant-design/v5-patch-for-react-19": "1.0.3",
+    "antd": "5.28.0",
+    "axios": "1.13.2",
+    "dayjs": "1.11.19",
     "next": "16.0.1",
+    "quill-delta-to-html": "^0.12.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "20",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
