--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4000",
+    "dev": "next dev -p 10072",
     "build": "next build",
     "start": "next start -p 81",
-    "lint": "eslint"
+    "lint": "biome check",
+    "format": "biome format --write"
   },
   "dependencies": {
     "@ant-design/icons": "5.6.1",
@@ -20,13 +21,12 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "20",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
